manifests/overlays/prod/route-patch.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: example-app
spec:
  subdomain: example-node-app-prod
